# gsoc25-tests

./: CMakeLists.txt  LP.txt  README.md  SystemInformation.in  points.txt  points_sparse.txt  test1.R
include/: IPM.hpp  cube_samp.hpp
src/: IPM.cpp  cube_samp.cpp  main.cpp
